--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "EF Slack app",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watchAll",
     "start": "node server.js"
   },
   "keywords": [
@@ -18,6 +19,7 @@
     "@slack/events-api": "^1.0.1",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "mongoose": "^5.0.3",
     "sprintf-js": "^1.1.1"
   },
   "devDependencies": {
