--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     ports:
       - "3000:3000"
+    env_file: .env
     environment:
       - NODE_ENV=development
     volumes:
