--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "author": "michal.pasierbski@ef.com",
   "license": "MIT",
   "dependencies": {
-    "@slack/client": "^3.16.0",
+    "@slack/client": "^4.0.1",
     "@slack/events-api": "^1.0.1",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.3",
     "node-schedule": "^1.3.0",
+    "request": "^2.85.0",
     "sprintf-js": "^1.1.1"
   },
   "devDependencies": {
